# summit_agriculture

./: .gitmodules  README.md
camera_info_pub/: CMakeLists.txt  package.xml
camera_info_pub/camera_info_pub/: camera_info_pub_node.py
furrow_following/: CMakeLists.txt  package.xml
furrow_following/furrow_following/: depth_image_centering_node.py  furow_follower_green.py  furrow_following_node.py  green_furrow_follower.py
furrow_following/furrow_following/state_machines/: __init__.py  check_end_furrow_state_machine.py  furrow_following_state_machine.py  furrow_robot_sm.py  gps_check_end_furrow_state_machine.py  main_state_machine.py  move_to_next_furrow_state_machine.py  moving_forward_state_machine.py  nav2_move_to_next_furrow_state_machine.py  odom_check_end_furrow_state_machine.py  turning_state_machine.py
furrow_following/furrow_following/states/: __init__.py  calculate_forward_state.py  calculate_next_furrow_state.py  calculate_turn_state.py  calculate_twist_state.py  check_end_furrow_state.py  check_furrow_state.py  depth_check_end_furrow_state.py  drive_state.py  get_depth_image_sate.py  get_gps_sate.py  get_odom_state.py  gps_check_end_furrow_state.py  nav2_state.py  odom_check_end_furrow_state.py  outcomes.py
furrow_following/launch/: furrow_following.launch.py  realsense.launch.py
maize_gps_viewer/: README.md  corn_detections.csv  corn_tracker.py  gps_line_generator.py  maize_viewer.py  waypoints.yaml
robotnik_filters/: CMakeLists.txt  package.xml
robotnik_filters/include/robotnik_filters/: filter_node.hpp
robotnik_filters/launch/: robotnik_filters.launch.py
robotnik_filters/src/: filter.cpp  filter_node.cpp
summit_cornfield/: CMakeLists.txt  package.xml
summit_cornfield/launch/: agrarias.launch.py  campus.launch.py  cornfield.launch.py  field.launch.py  frutales.launch.py  furrows.launch.py  gazebo.launch.py  lupulo.launch.py  maizes.launch.py  maizes2.launch.py  maze.launch.py
summit_cornfield/models/agrarias/: model.config  model.sdf
summit_cornfield/models/campusReducidoUp/: model.config  model.sdf
summit_cornfield/models/corn/: model.config  model.sdf
summit_cornfield/models/corn/meshes/: corn.dae
summit_cornfield/models/corn_1/: model.config  model.sdf
summit_cornfield/models/corn_1/meshes/: corn.dae
summit_cornfield/models/corn_2/: model.config  model.sdf
summit_cornfield/models/corn_2/meshes/: corn.dae
summit_cornfield/models/corn_3/: model.config  model.sdf
summit_cornfield/models/corn_3/meshes/: corn.dae
summit_cornfield/models/corn_4/: model.config  model.sdf
summit_cornfield/models/corn_4/meshes/: corn.dae
summit_cornfield/models/corn_5/: model.config  model.sdf
summit_cornfield/models/corn_5/meshes/: corn.dae
summit_cornfield/models/cornfield/: model.config  model.sdf
summit_cornfield/models/frutales/: model.config  model.sdf
summit_cornfield/models/furrows/: model.config  model.sdf
summit_cornfield/models/lupulo/: model.config  model.sdf
summit_cornfield/summi_cornfield/: add_corns_node.py
summit_cornfield/summit_cornfield/: add_corns_node.py  add_maizes_node.py  add_random_maizes_node.py
summit_cornfield/worlds/: agrarias.world  campus.world  cornfield.world  empty.world  field.world  frutales.world  furrows.world  lupulo.world  maizes.world  maizes2.world
summit_localization/: CMakeLists.txt  package.xml
summit_localization/config/: dual_ekf_navsat.yaml  ekf.yaml  ekf_map.yaml  ekf_odom.yaml  filter_config.yaml  gps_waypoints.yaml  imu_compass.yaml  lidarslam.yaml  navsat.yaml  summit.mvc  summit_dual_ekf_navsat_params.yaml
summit_localization/launch/: dual_ekf.launch.py  ekf.launch.py  imu_compass.launch.py  lidarslam.launch.py  localization.launch.py  obstacles_detection.launch.py  point_cloud_xyzrgb.launch.py  rgbd_odometry.launch.py  rtabmap.launch.py  summit_dual_ekf_navsat.launch.py  summit_gps_waypoint_follower.launch.py  summit_mapviz.launch.py
summit_localization/summit_localization/: gps_waypoint_logger.py  gps_waypoints.yaml  interactive_waypoint_follower.py  logged_waypoint_follower.py  loop_waypoint_follower.py  set_compass_pose.py
summit_navigation/: CMakeLists.txt  package.xml
summit_navigation/behavior_trees/: summit_bt.xml
summit_navigation/launch/: bringup.launch.py  navigation.launch.py
summit_navigation/params/: DWB.yaml  Navfn.yaml  Navfn_DWB.yaml  Navfn_RPP.yaml  Navfn_TEB.yaml  RPP.yaml  SmacHybrid.yaml  SmacHybrid_DWB.yaml  SmacHybrid_RPP.yaml  SmacHybrid_TEB.yaml  SmacLattice.yaml  SmacLattice_DWB.yaml  SmacLattice_RPP.yaml  SmacLattice_TEB.yaml  TEB.yaml  ThetaStar.yaml  common.yaml  costmaps.yaml
summit_navigation/rviz/: nav2.rviz
summit_realsense/: CMakeLists.txt  package.xml
summit_realsense/launch/: realsense.launch.py  robot_state_publisher.launch.py
summit_realsense/robots/: d455.urdf.xacro
