<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robotnik_filters</name>
  <version>0.0.0</version>
  <description>
    Robotnik Pointcloud filter
  </description>
  <maintainer email="rmartin@robotnik.es">Rafael Martin</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_1.10</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
